--- a/ToDoList/Properties/launchSettings.json
+++ b/ToDoList/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "development": {
       "commandName": "Project",
-      "dotnetRunMessages": false,
+      "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
